<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2019 Bernard Che Longho
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/dbInitialize"
        style="@style/buttonFullStyle"
        android:layout_marginTop="64dp"
        android:text="@string/dbInitialize"
        android:onClick="createDb"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/linearHeight"
        android:layout_marginTop="@dimen/defaultMargin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dbCreate"
            style="@style/buttonSideBySide"
            android:text="@string/dbCreate"
            android:onClick="loadData"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.05" />

        <Button
            android:id="@+id/dbRead"
            style="@style/buttonSideBySide"
            android:onClick="readData"
            android:text="@string/dbRead" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/defaultMargin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/linearHeight"
        android:layout_marginTop="@dimen/defaultMargin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dbUpdate"
            style="@style/buttonSideBySide"
            android:onClick="updateEntry"
            android:text="@string/dbUpdate" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.05" />

        <Button
            android:id="@+id/dbDelete"
            style="@style/buttonSideBySide"
            android:onClick="deleteFromDb"
            android:text="@string/dbDelete" />
    </LinearLayout>

    <Button
        android:onClick="clearDb"
        android:id="@+id/dbDropAll"
        style="@style/buttonFullStyle"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/dbDropAll" />
</LinearLayout>